@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-08T02:06:40Z",
+  "timestamp" : "2022-10-08T16:35:08Z",
   "count_outdated" : 541,
   "uniques_outdated" : 346,
-  "count" : 565,
-  "uniques" : 362,
+  "count" : 567,
+  "uniques" : 363,
   "clones" : [
     {
       "timestamp": "2022-09-24T00:00:00Z",
@@ -81,6 +81,13 @@
       "count_minmax": [ 1, 2 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
+    },
+    {
+      "timestamp": "2022-10-08T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
