@@ -1,6 +1,6 @@
 {
-  "count": 24,
-  "uniques": 4,
+  "count": 26,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2022-09-24T00:00:00Z",
@@ -56,6 +56,11 @@
       "timestamp": "2022-10-05T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-10-08T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
