@@ -1,3 +1,11 @@
+2022-10-08T16:35:08Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3211071227
+* notice: last 14d: unq all: 5 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 346 541 / 362 565
+* notice: next accum: outdated-unq outdated-all / unq all: 346 541 / 363 567
+* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-08]
+
 2022-10-08T02:06:40Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3208750086
 * notice: last 14d: unq all: 4 24
